--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>HW5</title>
   </head>
   <body>
-    <script src="./js/task-1.js" defer></script>
-    <script src="./js/task-2.js" defer></script>
-    <script src="./js/task-3.js" defer></script>
-    <script src="./js/task-4.js" defer></script>
+    <script src="./js/task-1.js" defer type="module"></script>
+    <script src="./js/task-2.js" defer type="module"></script>
+    <script src="./js/task-3.js" defer type="module"></script>
+    <script src="./js/task-4.js" defer type="module"></script>
   </body>
 </html>
